--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -11,6 +11,12 @@
   font-weight: 700;
 }
 
+$primary-color: #d81b60;
+$secondary-color: #ff5c8d;
+$tertiary-color: #a00037;
+$dark-grey: #E1E2E1;
+$light-grey: #F5F5F6;
+
 body {
   margin: 0;
   padding: 0;
@@ -24,6 +30,6 @@ code {
     monospace;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
